--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@
 body {
   margin: 0;
   font-family: 'Inter', Arial;
-  overflow-x: hidden;
 }
 
 .nice-btn {
